The big pool allocators use pool_page_alloc(), which allocates page-aligned storage. So if we switch to a big pool, set PR_NOALIGN, because the address of the storage is not aligned to the item size.

Should fix PR/54319.